Fix bug with KeyValueParamDTO
- Switch back parsing KeyValueParam before openApi generation